# Rust-LSynth

./: Cargo.toml  README.md
docs/: crates.js  index.html  search-index.js  settings.html  source-files.js
docs/implementors/core/clone/: trait.Clone.js
docs/implementors/core/fmt/: trait.Debug.js
docs/implementors/core/marker/: trait.Freeze.js  trait.Send.js  trait.Sync.js  trait.Unpin.js
docs/implementors/serde/de/: trait.Deserialize.js
docs/implementors/serde/ser/: trait.Serialize.js
docs/lsynth/: all.html  enum.Command.html  index.html  sidebar-items.js  struct.ChipGenerationData.html  struct.ChipParameters.html  struct.ChipState.html
docs/lsynth/c_compatible/: fn.ls_amplitude_slide.html  fn.ls_force_set_amplitude.html  fn.ls_force_set_panning.html  fn.ls_frequency_slide.html  fn.ls_generate.html  fn.ls_get_tick_frames.html  fn.ls_init.html  fn.ls_panning_slide.html  fn.ls_send_command.html  fn.ls_set_amplitude.html  fn.ls_set_custom_waveform.html  fn.ls_set_frequency.html  fn.ls_set_panning.html  fn.ls_set_phase.html  fn.ls_set_waveform.html  index.html  sidebar-items.js
docs/lsynth/errors/: enum.LSynthError.html  index.html  sidebar-items.js  struct.InvalidChannelError.html  struct.InvalidWaveformError.html  struct.UnevenBufferSliceError.html
docs/lsynth/waveform/: constant.CUSTOM_WIDTH.html  index.html  sidebar-items.js  type.CustomWaveform.html
docs/src/lsynth/: c_compatible.rs.html  channel.rs.html  errors.rs.html  lib.rs.html  waveform.rs.html
src/: c_compatible.rs  channel.rs  errors.rs  lib.rs  waveform.rs
(+2 files in other folders)
