[package]
name = "lsynth"
version = "0.1.0"
authors = ["abledbody <drewisakid@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.3"
rayon = "1.5.1"

[lib]
#name = "lsynth"
#crate-type = ["cdylib"]